# wm-summer-school

./: LICENSE  README.md
2024/: README.md  pyproject.toml  workflow.py
2025/: README.md  pyproject.toml  workflow.py
