[project]
name = "wm-summer-school"
version = "2025.04"
description = "Database preparation workflow for the W&M Summer School"
requires-python = "==3.11.*"
dependencies = [
    "disruption-py==0.10.0",
]

[tool.uv.sources]
disruption-py = { git = "https://github.com/MIT-PSFC/disruption-py/", rev = "39007738ac91b201496f1cb3b170f30e71a54f7c" }

